--- a/templates/activity_picker.html
+++ b/templates/activity_picker.html
@@ -1,22 +1,18 @@
 {% extends 'base.html' %} {% block body %}
 
-<h2>{{ the_title }}</h2>
 
 <form method='POST' action='/apply_activity'>
 	<section class="form-header">
-		<!-- {% if message is defined %}
-    <p>{{ message }}</p>
-    {% endif %}
-    <p>Please select the Major Power you would like to add to your character:</p> -->
 		<h2>Choose an Activity</h2>
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-bicycle" aria-hidden="true"></i>
+ Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity'] }}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -25,11 +21,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category investigate-section">
-			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-binoculars" aria-hidden="true"></i>
+ Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -38,11 +35,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category serve-section">
-			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-star-o" aria-hidden="true"></i>
+ Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -51,11 +49,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-fire" aria-hidden="true"></i>
+ Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -64,11 +63,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category create-section">
-			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-lightbulb-o" aria-hidden="true"></i>
+ Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -77,11 +77,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-camera" aria-hidden="true"></i>
+ Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -90,11 +91,12 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-map-marker" aria-hidden="true"></i>
+ Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity']}} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
@@ -114,7 +116,7 @@
 <script type="text/javascript">
 	jQuery(function(){
 		menuFunction();
-		oddSpotter();
+
 	});
 
 	function menuFunction(){
@@ -124,7 +126,7 @@
 	}
 
 	function oddSpotter(){
-		$( ".picker:odd" ).css( "background-color", "#999999" );
+		$( ".picker:odd" ).css( "background-color", "#b3b3b3" ).css("color", "#000000");
 	}
 
 </script>
