--- a/templates/priority_list.html
+++ b/templates/priority_list.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %} {% block body %}
 
-<h2>{{ the_title }}</h2>
 
 <form method='POST' action='/apply_activity'>
 	<section class="form-header">
@@ -8,12 +7,12 @@
     <p>{{ message }}</p>
     {% endif %}
     <p>Please select the Major Power you would like to add to your character:</p> -->
-		<h2>Choose a Priority Activity</h2>
+		<h2>Priority List</h2>
 
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
+			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -26,7 +25,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category investigate-section">
-			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }} &#47;2</span></h3>
+			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -39,7 +38,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category serve-section">
-			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }} &#47;2</span></h3>
+			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -52,7 +51,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
+			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -65,7 +64,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category create-section">
-			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }} &#47;2</span></h3>
+			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -78,7 +77,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
+			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -91,7 +90,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
+			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
@@ -115,7 +114,7 @@
 <script type="text/javascript">
 	jQuery(function(){
 		menuFunction();
-		oddSpotter();
+
 	});
 
 	function menuFunction(){
