--- a/templates/priority_picker.html
+++ b/templates/priority_picker.html
@@ -1,17 +1,18 @@
 {% extends 'base.html' %} {% block body %}
 
-<h2>Priority Picker</h2>
+
 
 <form method='POST' action='/priority_processor'>
 	<section class="form-header">
-
+		<h2>Priority Picker</h2>
+		<p>Add to the Priority List.</p>
+		<p>Select activities in the top section to <em>add to</em> the priority list</p>
 
 
 	</section>
 
 	<section class="form-body">
-		<h2>Add to Priority List</h2>
-		<p>Select activities in the top section to <em>add to</em> the priority list</p>
+
 		<section class="picker-category get-moving-section">
 			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
@@ -124,10 +125,11 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-
-		<h2>Remove from Priority List</h2>
-		<p>Select activities in the bottom section to <em>remove from</em> the priority list</p>
-		<section class="picker-category get-moving-section">
+		<section class="removal-notice">
+			<h2>Remove from Priority List</h2>
+			<p>Select activities in the bottom section to <em>remove from</em> the priority list</p>
+		</section>
+		<section class="picker-category get-moving-section remove-category">
 			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -143,7 +145,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category investigate-section">
+		<section class="picker-category investigate-section remove-category">
 			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -159,7 +161,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category serve-section">
+		<section class="picker-category serve-section remove-category">
 			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -175,7 +177,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category outdoor-skills-section">
+		<section class="picker-category outdoor-skills-section remove-category">
 			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -191,7 +193,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category create-section">
+		<section class="picker-category create-section remove-category">
 			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -207,7 +209,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category just-for-fun-section">
+		<section class="picker-category just-for-fun-section remove-category">
 			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -223,7 +225,7 @@
 			{% endfor %}
 		</section><!-- end picker-category -->
 
-		<section class="picker-category know-your-parks-section">
+		<section class="picker-category know-your-parks-section remove-category">
 			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
@@ -249,7 +251,7 @@
 <script type="text/javascript">
 	jQuery(function(){
 		menuFunction();
-		oddSpotter();
+
 	});
 
 	function menuFunction(){
