--- a/templates/completed.html
+++ b/templates/completed.html
@@ -1,4 +1,11 @@
-{% extends 'base.html' %} {% block body %}
+{% extends 'base.html' %}
+
+{% block head %}
+
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+{% endblock %}
+
+{% block body %}
 
 
 
@@ -18,7 +25,7 @@
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity'] }}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -38,7 +45,7 @@
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -58,7 +65,7 @@
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -78,7 +85,7 @@
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -98,7 +105,7 @@
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -118,7 +125,7 @@
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -138,7 +145,7 @@
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				  {% if data[activity]['thumb_list'] %}
@@ -164,7 +171,7 @@
 <script type="text/javascript">
 	jQuery(function(){
 		menuFunction();
-		
+
 	});
 
 	function menuFunction(){
