--- a/templates/priority_picker.html
+++ b/templates/priority_picker.html
@@ -20,7 +20,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -36,7 +36,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -52,7 +52,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -68,7 +68,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -84,7 +84,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -100,7 +100,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -116,7 +116,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -136,7 +136,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -152,7 +152,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -168,7 +168,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -184,7 +184,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -200,7 +200,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -216,7 +216,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
@@ -232,7 +232,7 @@
 			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
-      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
+      					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}" required>
       					<span class="checkmark-2"></span>
       				</label>
 				</div>
