--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<title>{{ the_title }}</title>
 	<link rel="stylesheet" href="static/style.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	{% block head %} {% endblock %}
 </head>
 
 <body>
