--- a/templates/priority_list.html
+++ b/templates/priority_list.html
@@ -1,4 +1,11 @@
-{% extends 'base.html' %} {% block body %}
+{% extends 'base.html' %}
+
+{% block head %}
+
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+{% endblock %}
+
+{% block body %}
 
 
 <form method='POST' action='/apply_activity'>
@@ -17,7 +24,7 @@
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity'] }}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -30,7 +37,7 @@
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -43,7 +50,7 @@
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -56,7 +63,7 @@
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -69,7 +76,7 @@
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -82,7 +89,7 @@
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
@@ -95,7 +102,7 @@
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
-			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
+			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
 				</div>
